Initial Commit - Syntax highlighting, theme, language config, extension config

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
+# node.js
 node_modules/
 bower_components/
 *.log
 
 build/
 dist/
+
+# dotnet / C#
+bin/
+obj/
+*.csproj.user
+*.sln.DotSettings.user
+.vs/
+*.dll
+*.exe
+*.pdb
+appsettings.local.json
